--- a/index.html
+++ b/index.html
@@ -1,48 +1,18 @@
 <html>
     <head>
         <script src="assets/scripts/jquery.min.js"></script>
-        <script src="assets/scripts/jquery.qrcode.min.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <center>
+            <img src="assets/images/fluiditynetwork.svg" style="width:250px;height:250px;"></img>
         <h1 id='header'>Fluidity Network Mainnet Wallet</h1>
         <h2 id='description'>Connecting to the chain...</h2>
-        <h2><div id='votingTimer'>Loading timer...</div></h2>
-        <button id="voteFactoryHeader">Toggle contract details</button>
-        <div id="voteFactoryAddress" style="display: none">Loading javascript...
-        </div>
-        <table>
-            <tr>
-                <td style="vertical-align: bottom" align="center" height="220px">
-                    <img id='yesBar' src='assets/images/blue.png' alt='blue bar showing yes votes' width='50px' height='0px' />
-                </td>
-                <td style="vertical-align: bottom" align="center" height="220px">
-                    <img id='noBar' src='assets/images/red.png' alt='red bar showing no votes' width='50px' height='0px' />
-                </td>
-            </tr>
-            <tr>
-                <td id='yesText' align="center">
-                    YES!<br />(0 votes)
-                </td>
-                <td id='noText' align="center">
-                    NO!<br />(0 votes)
-                </td>
-            </tr>
-            <tr>
-                <td align="center">
-                    <div id="yesQrContainer">
-                    </div>
-                    <div id="yesAddress">
-                    </div>
-                </td>
-                <td align="center">
-                    <div id="noQrContainer">
-                    </div>
-                    <div id="noAddress">
-                    </div>
-                </td>
-            </tr>
-        </table>
+        <h4>Contract Address: 0xfa52274dd61e1643d2205169732f29114bc240b3</h4>
+        <form>
+            Provide the amount of Ether to deposit to Fluidity Mainnet Wallet:<br />
+            <input type="text" id="deposit_ether"></input><br />
+        <button id="deposit_button">Deposit Ether</button>
         </center>
         <script src="assets/scripts/mainscript.js"></script>
     </body>
