Check if connected to metamask

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <center>
             <img src="assets/images/fluiditynetwork.svg" style="width:250px;height:250px;"></img>
         <h1 id='header'>Fluidity Network Mainnet Wallet</h1>
-        <h2 id='description'>Connecting to the chain...</h2>
+        <h3 id='description'>Waiting for Metamask to establish connection ...</h2>
         <h4>Contract Address: 0xfa52274dd61e1643d2205169732f29114bc240b3</h4>
         <form>
             Provide the amount of Ether to deposit to Fluidity Mainnet Wallet:<br />
